--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,14 @@ __pycache__/
 # C extensions
 *.so
 
+*.h5
+
+*.csv
+*.xls
+*.jpg
+*.jpeg
+*.png
+
 # Distribution / packaging
 .Python
 build/
@@ -102,3 +110,6 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+
+.idea
